		User Admin: added link to family for each user in User Admin screen, making it easier to find students based on parents
		User Admin: fixed bug preventing family import
		User Admin: added ability to allow control over formatting of usernames
		User Admin: made list of religions settable via a comma-separated list in User Settings
		User Admin: added log entry when privacy settings are changed

v11.0.00
--------
	Headlines
		New Tracking modules adds longitudinal graphing and data exports of student assessment data
		New Formal Assessment module facilitates teacher-inputted, school-wide Internal Assessments, and incorporates old External Assessment module
		New custom fields feature allows easy creation of new user fields for use in User Admin, Application Form, Data Updater and Students modules
		Improved user import functionality allows operation in both sync and import modes
		Additional parent interfaces give access to Behaviour and Finance information
		Improved Class overview page within the Departments module

	Changes With Important Notices
		System: generalised stars, so that they are all in one table, with common methods, usable to additional modules.
			NOTE: RESETS STARS/LIKES TO ZERO
		System admin: changed administrator, DBA and admissions contacts to system users, not addresses.
			NOTE: THIS MEANS ADMINS NEED TO BE RESET UNLESS THEY HAVE gibbonPersonID=1
		Google: migrated OAuth authentication to use main Google libraries.
			NOTE: REQUIRES REDIRECT URL RESET IN BOTH GOOGLE DEV CONSOLE AND IN GIBBON

	Significant Changes
		System: added module actions to Fast Finder, in order to allow quick access to any functionality in the system
		System: set all current users, and future users, to have email notifications on by default (makes notifications more obvious)
		Activities: enabled generation of Finance invoices, based on activity enrolment
		Behaviour: added automated sending of pre-defined letters for behaviour